# amber-cpp-sdk

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README-dev.md  README.md  amber_models.h  amber_sdk.cpp  generate.py  main.cpp  models.cpp  models.h  runtest  sdk.cpp  sdk.h
data/: pretrain-data.csv
examples/: connect_example.cpp  full_example.cpp  pretrain.cpp  stream_advanced.cpp  version.cpp
include/: amber_gen.h  amber_models.h  amber_sdk.h
src/: amber_sdk.cpp
test/: secrets.cpp  secrets.h  test.Amber.license  test_authenticate.cpp  test_endpoints.cpp  test_init.cpp
